Appended initial svg to the body of the HTML.

--- a/index.jade
+++ b/index.jade
@@ -4,6 +4,5 @@ html
     script(type="text/javascript" src="d3.js")
     body
       script(type="text/javascript")
-        
-        var
-      
+        //Append initial svg to the body of the HTML
+        var mySVG = d3.select("body").append("svg");
