Created an SVG rectangle for for every element of the data array

--- a/index.jade
+++ b/index.jade
@@ -18,5 +18,14 @@ html
         //the raw numbers for pixel height so we must scale the data to 
         //the correct pixel dimensions
         var heightScale = d3.scale.linear()
-          .domain([0, 963])// The range of data you want to scale 
+          .domain([0, d3.max(de, function(d){return d.count;})])// The range of data you want to scale 
           .range([0, 400]);// The range of pixels you want to scale
+        
+        
+        //-Write the main rendering statements 
+          // Create an SVG rectangle for for every element of the data array
+        
+        var myBars = mySVG.selectAll('rect')
+          .data(de)
+          .enter()
+          .append('svg:rect');   
